made z-index for navdrawer container negative instead of zero to fix template link tag fix

--- a/app/styles/base-d45.css
+++ b/app/styles/base-d45.css
@@ -609,7 +609,7 @@ button:active {
   .navdrawer-container {
     position: fixed;
     width: 42%;
-    z-index: 0;
+    z-index: -1;
     opacity: 0; }
 
   .navdrawer-container .navbar-subnav .navbar-sublist.subnav-is-opened {
