--- a/app/styles/partials/navbar.scss
+++ b/app/styles/partials/navbar.scss
@@ -320,7 +320,7 @@ button:active {
     position: fixed;
     width: 42%;
 //    width: 30%;
-    z-index: 0;
+    z-index: -1;
     opacity: 0;
   }
 
